# fractal-ilastik-tasks

./: .copier-answers.yml  .gitignore  README.md  create_env_script.sh  legacy_instructions.md  pyproject.toml
.github/workflows/: build_and_test.yml
src/ilastik_tasks/: __FRACTAL_MANIFEST__.json  __init__.py  ilastik_pixel_classification_segmentation.py  ilastik_utils.py
src/ilastik_tasks/dev/: create_manifest.py  task_list.py
src/ilastik_tasks/dev/docs_info/: ilastik_pixel_classifier.md
tests/: conftest.py  test_ilastik_pixel_classification_segmentation.py  test_valid_args_schemas.py
tests/data/: pixel_classifier_3D_dual_channel.ilp  pixel_classifier_3D_single_channel.ilp
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/: .zattrs
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/: .zarray
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/0/0/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/0/1/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/0/2/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/0/3/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/1/0/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/1/1/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/1/2/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/0/1/3/0/: 0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/1/: .zarray
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/2/: .zarray
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/3/: .zarray
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/4/: .zarray
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/tables/: .zattrs
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/tables/FOV_ROI_table/X/: .zarray  0.0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/tables/emb_ROI_table_2_linked/: .zattrs
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/tables/emb_ROI_table_2_linked/X/: .zarray  0.0
tests/data/AssayPlate_Greiner_CELLSTAR655090_B03_0.zarr/tables/well_ROI_table/X/: 0.0
tests/data/test_mip_ome.zarr/tables/FOV_ROI_table/: .zattrs
tests/data/test_mip_ome.zarr/tables/FOV_ROI_table/X/: .zarray  0.0
tests/data/test_mip_ome.zarr/tables/FOV_ROI_table/obs/FieldIndex/: 0
